New title for each image

--- a/statistics.html
+++ b/statistics.html
@@ -17,12 +17,12 @@
       <tr>
         <th class="row-icon"><div class="pix corner"> <img id="Head" class="" alt=""> </div></th>
 
-        <th><div class="pix"> <img class = "center-pix" src="sprites/Star.png" alt=""> </div></th>
-        <th><div class="pix"> <img class="center-pix" src="sprites/Contribution.png" alt=""> </div></th>
-        <th><div class="pix"> <img class="center-pix" src="sprites/Commit.png" alt=""> </div></th>
-        <th><div class="pix"> <img class="center-pix" src="sprites/Code.png" alt=""> </div></th>
-        <th><div class="pix"> <img class="center-pix" src="sprites/Size.png" alt=""> </div></th>
-        <th><div class="pix"> <img class="center-pix" src="sprites/Fork.png" alt=""> </div></th>
+        <th><div class="pix"> <img title="Stars" class = "center-pix" src="sprites/Star.png" alt=""> </div></th>
+        <th><div class="pix"> <img title="Contributors" class="center-pix" src="sprites/Contribution.png" alt=""> </div></th>
+        <th><div class="pix"> <img title="Commits" class="center-pix" src="sprites/Commit.png" alt=""> </div></th>
+        <th><div class="pix"> <img title="Language" class="center-pix" src="sprites/Code.png" alt=""> </div></th>
+        <th><div class="pix"> <img title="Size" class="center-pix" src="sprites/Size.png" alt=""> </div></th>
+        <th><div class="pix"> <img title="Forks" class="center-pix" src="sprites/Fork.png" alt=""> </div></th>
       </tr>
     </thead>
 
