:tada: new btn for download img

--- a/statistics.html
+++ b/statistics.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Minecraft Stats</title>
 <link rel="stylesheet" href="style/Statistics.css">
+<script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js" defer></script>
 <script defer type = "module" src="script/statistics.js"></script>
 </head>
 <body>
@@ -33,6 +34,9 @@
   </table>
   <table id="table"></table>
 </div>
+<button id="downloadStats" class="download-btn">
+    Télécharger en PNG
+  </button>
 
 </body>
 </html>
