Add button to download the image

--- a/statistics.html
+++ b/statistics.html
@@ -34,9 +34,10 @@
   </table>
   <table id="table"></table>
 </div>
-<button id="downloadStats" class="download-btn">
-    Télécharger en PNG
+  <div class = "mc-btn-wrap">
+  <button id="downloadStats" class="mc-btn">
+      Télécharger en PNG
   </button>
-
+</div>
 </body>
 </html>
