enlever la sensibilité à la casse

--- a/statistics.html
+++ b/statistics.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Minecraft Stats</title>
-<link rel="stylesheet" href="style/Statistics.css">
+<link rel="stylesheet" href="style/statistics.css">
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js" defer></script>
 <script defer type = "module" src="script/statistics.js"></script>
 </head>
