frech to english comment

--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 </div>
   <div class = "mc-btn-wrap">
   <button id="downloadStats" class="mc-btn">
-      Télécharger en PNG
+      Download in PNG
   </button>
 </div>
 </body>
